--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,14 @@
 site_name: My Docs
 theme:
     name: mkdocs
+
     highlightjs: true
     hljs_languages:
         - yaml
         - django
-
+    shortcuts:
+        help: 191    # ?
+        next: 78     # n
+        previous: 80 # p
+        search: 83   # s
 repo_url: https://github.com/lkappel/centreon-se-doc
